# hla-pipeline-manager

./: CONTRIBUTING.md  Dockerfile  Makefile  README.md  check_hla_imputation_status.sh  deploy_hla_results.sh  execute_batch_imputation.sh  locate_array_mapping_file.sh  pyproject.toml
.github/workflows/: ci.yml
legacy/: find_hla_participants.sh  generate_clinical_hla_report.sh  run_hla_imputation_pipeline.sh
src/hla_pipeline/: __init__.py  deployer.py  executor.py  reporter.py  verifier.py
src/hla_pipeline_manager.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_deployer.py  test_executor.py  test_reporter.py  test_verifier.py
